--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "@dashkite/genie-presets": "^0.5.3"
   },
   "dependencies": {
+    "@dashkite/base64": "^1.0.1",
     "@dashkite/joy": "^0.3.15",
-    "@stablelib/base64": "^1.0.1",
-    "@stablelib/utf8": "^1.0.1"
+    "@dashkite/utf8": "^1.0.1"
   }
 }
